--- a/samples/cpp/module_genai/config_pipeline/config_qwen2_5_vl.yaml
+++ b/samples/cpp/module_genai/config_pipeline/config_qwen2_5_vl.yaml
@@ -42,6 +42,8 @@ pipeline_modules:
         type: "OVTensor"
       - name: "thw"
         type: "OVTensor"
+      - name: "resized_size"
+        type: "VecInteger"
     params:
       target_resolution: [224, 224]
       mean: [0.485, 0.456, 0.406]
@@ -61,7 +63,26 @@ pipeline_modules:
       - name: "mask"
         type: "OVTensor"
     params:
-      model_path: "/mnt/disk2/Qwen2.5-VL-7B-Instruct-INT4"
+      model_path: "/data/ov_modular/eagle3/qwen2.5-vl-7b-ov-int4"
+
+  # --- 3. 视觉编码模块 (Vision Encoder) ---
+  vision_encoder:
+    type: "VisionEncoderModule"
+    device: "GPU"
+    inputs:
+      - name: "image_input"
+        type: "OVTensor"
+        source: "image_preprocessor.thw"
+      - name: "image_resized_size"
+        type: "VecInteger"
+        source: "image_preprocessor.resized_size"
+    outputs:
+      - name: "image_embedding"
+        type: "OVTensor"
+      - name: "video_embedding"
+        type: "OVTensor"
+    params:
+      model_path: "/data/ov_modular/eagle3/qwen2.5-vl-7b-ov-int4"
 
   # --- 2. Result Module ---
   pipeline_result:
@@ -69,10 +90,10 @@ pipeline_modules:
     description: "Collects final results and formats the output structure."
     device: "CPU"
     inputs:
-      - name: "raw_data"
+      - name: "image_embedding"
         type: "OVTensor"
-        source: "image_preprocessor.raw_data"
+        source: "vision_encoder.image_embedding"
 
     outputs:
-      - name: "raw_data"
+      - name: "image_embedding"
         type: "OVTensor"
