Reapply "add TextEmbeddingModule"
This reverts commit 59e3934037d8ff7047702bf3a5df34e9a59414ff.

--- a/samples/cpp/module_genai/config_pipeline/config_qwen2_5_vl.yaml
+++ b/samples/cpp/module_genai/config_pipeline/config_qwen2_5_vl.yaml
@@ -63,7 +63,7 @@ pipeline_modules:
       - name: "mask"
         type: "OVTensor"
     params:
-      model_path: "/data/ov_modular/eagle3/qwen2.5-vl-7b-ov-int4"
+      model_path: "/mnt/disk2/Qwen2.5-VL-7B-Instruct-INT4"
 
   # --- 3. 视觉编码模块 (Vision Encoder) ---
   vision_encoder:
@@ -83,8 +83,23 @@ pipeline_modules:
         type: "OVTensor"
     params:
       model_path: "/data/ov_modular/eagle3/qwen2.5-vl-7b-ov-int4"
+  
+  # --- 3. Text Embedding 模块 ---
+  text_embedding:                     # Module Name
+    type: "TextEmbeddingModule"
+    device: "GPU"
+    inputs:
+      - name: "input_ids"
+        type: "OVTensor"              # Token ids tensor from TextEncoderModule
+        source: "prompt_encoder.input_ids"
+    outputs:
+      - name: "input_embedding"
+        type: "OVTensor"              # Or OVRemoteTensor depending on device / use case
+    params:
+      model_path: "/mnt/disk2/Qwen2.5-VL-7B-Instruct-INT4"
+      scale_emb: "1.0"
 
-  # --- 2. Result Module ---
+  # --- 4. Result Module ---
   pipeline_result:
     type: "ResultModule"
     description: "Collects final results and formats the output structure."
