PythonAPI and auto padding unit test's input and output nodes. (#18)
* padding input output module

* python api draft

* fix rebase conflict issue

* python api draft

Signed-off-by: xipingya <xiping.yan@intel.com>

* export ModulePipeline for python api.

Signed-off-by: xipingya <xiping.yan@intel.com>

* only input 4 dim image.

Signed-off-by: xipingya <xiping.yan@intel.com>

* python test pass

Signed-off-by: xipingya <xiping.yan@intel.com>

* add readme

---------

Signed-off-by: xipingya <xiping.yan@intel.com>

--- a/samples/cpp/module_genai/CMakeLists.txt
+++ b/samples/cpp/module_genai/CMakeLists.txt
@@ -7,6 +7,7 @@ project($TARGET_NAME)
 find_package(OpenVINO REQUIRED)
 find_package(OpenVINOGenAI REQUIRED)
 find_package(OpenCV REQUIRED)
+find_package(yaml-cpp REQUIRED)
 
 if(OpenCV_FOUND)
     message(STATUS "OpenCV found. Version: ${OpenCV_VERSION}")
@@ -19,4 +20,4 @@ add_executable(${TARGET_NAME} ${SRC_FILES})
 
 target_include_directories(${TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOUCE_DIR}" "${CMAKE_BINARY_DIR}" "${OpenCV_INCLUDE_DIRS}" "${CMAKE_CURRENT_SOURCE_DIR}/../../../src/cpp/src")
 
-target_link_libraries(${TARGET_NAME} PRIVATE openvino::genai ${OpenCV_LIBS})
+target_link_libraries(${TARGET_NAME} PRIVATE openvino::genai ${OpenCV_LIBS} ${YAML_CPP_LIBRARIES})
