--- a/samples/cpp/module_genai/ut_pipelines/Qwen2.5-VL-3B-Instruct/config.yaml
+++ b/samples/cpp/module_genai/ut_pipelines/Qwen2.5-VL-3B-Instruct/config.yaml
@@ -21,7 +21,7 @@ pipeline_modules:
   # --- 1. 图像预处理模块 (Image Preprocessing) ---
   image_preprocessor:       # Module Name
     type: "ImagePreprocessModule"
-    device: "GPU"
+    device: "CPU"
     description: "Image or Video preprocessing."
     inputs:
       - name: "image"     # single image
@@ -41,7 +41,7 @@ pipeline_modules:
   # --- 2. Prompt Encode 模块 ---
   prompt_encoder:
     type: "TextEncoderModule"
-    device: "GPU"
+    device: "CPU"
     inputs:
       - name: "prompts"
         type: "String"
@@ -65,7 +65,7 @@ pipeline_modules:
   # --- 3. Prompt Embedding 模块 ---
   text_embedding:
     type: "TextEmbeddingModule"
-    device: "GPU"
+    device: "CPU"
     inputs:
       - name: "input_ids"
         type: "OVTensor"
@@ -80,7 +80,7 @@ pipeline_modules:
   # --- 4. Vision Encoder 模块 ---
   vision_encoder:
     type: "VisionEncoderModule"
-    device: "GPU"
+    device: "CPU"
     inputs:
       - name: "preprocessed_image"
         type: "OVTensor"
@@ -102,7 +102,7 @@ pipeline_modules:
   # --- 5. Embedding Merger 模块 ---
   embedding_merger:
     type: "EmbeddingMergerModule"
-    device: "GPU"
+    device: "CPU"
     inputs:
       - name: "input_ids"
         type: "OVTensor"
