Add LLMInferece module
to do:
1. wip how to pass position id list parameter between two modules.

Signed-off-by: Zhang, Xiaolin <xiaolin.zhang@intel.com>

--- a/samples/cpp/module_genai/CMakeLists.txt
+++ b/samples/cpp/module_genai/CMakeLists.txt
@@ -15,7 +15,7 @@ else()
     message(FATAL_ERROR "OpenCV not found! Check your installation and environment.")
 endif()
 
-file(GLOB SRC_FILES *.cpp ut_modules/*.cpp)
+file(GLOB SRC_FILES CONFIGURE_DEPENDS *.cpp ut_modules/*.cpp)
 add_executable(${TARGET_NAME} ${SRC_FILES})
 
 target_include_directories(${TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOUCE_DIR}" "${CMAKE_BINARY_DIR}" "${OpenCV_INCLUDE_DIRS}")
